Add alt text on images

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -863,8 +863,8 @@
                 <p>El texto está disponible bajo la Licencia Creative Commons Atribución Compartir Igual 3.0; pueden aplicarse cláusulas adicionales. Al usar este sitio, usted acepta nuestros términos de uso y nuestra política de privacidad.
                 <br>Wikipedia® es una marca registrada de la Fundación Wikimedia, Inc., una organización sin ánimo de lucro.</p>
                 <div id="logos">
-                    <a href="https://wikimediafoundation.org/"><img src="img/wikimedia-button.png"></a>
-                    <a href="https://www.mediawiki.org/"><img src="img/poweredby_mediawiki_88x31.png"></a>
+                    <a href="https://wikimediafoundation.org/"><img src="img/wikimedia-button.png" alt="Logo Wikimedia"></a>
+                    <a href="https://www.mediawiki.org/"><img src="img/poweredby_mediawiki_88x31.png" alt="Logo Mediawiki"></a>
                 </div>
 
                 <ul style="font-size: 12px; padding-left: 0px;">
