Add new survey form

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="./style.css">
+  <link type="text/css" rel="stylesheet" href="./index.css">
   <title>FCC: Survey Form</title>
 </head>
-<body>
-  <div id="title-div">
-    <h1 id="title">freeCodeCamp Survey Form</h1>
-  </div>
 
-  <p id="description">Thank you for taking the time to help us improve the platform</p>
+<body>
+  <header class="text-center">
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
+  </header>
 
   <form id="survey-form">
     <fieldset>
-
-      <div class="form-group">
-      <label for="name">Name: </label>
-      <input id="name" type="text" name="items" placeholder="Enter your name" required>
-      </div>
-
-      <div class="form-group">
-      <label for="email">Email: </label>
-      <input type="email" id="email" name="items" placeholder="Enter your Email" required>
-      </div>
-
-      <div class="form-group" id="btn-submit">
-        <button id="submit" type="button" name="submit">Submit</button>
-      </div>
+      <label class="fields" for="name">Name</label><br>
+      <input id="name" type="text" name="fields" placeholder="Enter your name"><br>
+      <br>
+      <br>
+      <label class="fields" for="email">Email</label><br>
+      <input id="email" type="text" name="fields" placeholder="Enter your Email"><br>
+      <br>
+      <br>
+      <label class="fields" for="age">Age <span
+          style="font-size: 0.9em; font-weight: light;">(optional)</span></label><br>
+      <input id="age" type="number" min=10 max=99 name="fields" placeholder="Age"><br>
 
     </fieldset>
-
   </form>
 
 </body>
+
 </html>
