--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -16,22 +16,116 @@
   </header>
 
   <form id="survey-form">
-    <fieldset>
-      <label class="fields" for="name">Name</label><br>
-      <input id="name" type="text" name="fields" placeholder="Enter your name"><br>
-      <br>
-      <br>
-      <label class="fields" for="email">Email</label><br>
-      <input id="email" type="text" name="fields" placeholder="Enter your Email"><br>
-      <br>
-      <br>
-      <label class="fields" for="age">Age <span
-          style="font-size: 0.9em; font-weight: light;">(optional)</span></label><br>
-      <input id="age" type="number" min=10 max=99 name="fields" placeholder="Age"><br>
-
+    <div class="fieldset-blanks">
+      <p>
+        <label class="fields" id="name-label" for="name">Name</label>
+        <input class="input-field" id="name" type="text" name="fields" placeholder="Enter your name" required>
+      </p>
+      <label class="fields" id="email-label" for="email">Email</label>
+      <input class="input-field" id="email" type="email" name="fields" placeholder="Enter your Email" required>
+      <p>
+        <label class="fields" id="number-label" for="age">Age <span
+            style="font-size: 0.9em; font-weight: light;">(optional)</span></label>
+        <input class="input-field" id="number" type="number" min=10 max=99 name="fields" placeholder="Age">
+      </p>
+      <p>
+        <label class="fields" for="role">Which option best describes your current role?</label>
+        <select name="dropdown" id="dropdown">
+          <option class="select" value="select-role" disabled selected>Select current role</option>
+          <option value="student">Student</option>
+          <option value="job">Full Time Job</option>
+          <option value="learner">Full Time Learner</option>
+          <option value="prefer">Prefer not to say</option>
+          <option value="other">Other</option>
+        </select>
+      </p>
+    </div>
+    <fieldset class="fieldset-radio">
+      <legend class="fields">Would you recommend freeCodeCamp to a friend?</legend>
+      <p class="radio-option" style="margin-top: 0.5em;">
+        <input id="definitely" type="radio" name="radio-button" value="definitely">
+        <label for="definitely-option">Definitely</label>
+      </p>
+      <p class="radio-option">
+        <input id="maybe" type="radio" name="radio-button" value="maybe">
+        <label for="maybe-option">Maybe</label>
+      </p>
+      <p class="radio-option">
+        <input id="notsure" type="radio" name="radio-button" value="notsure">
+        <label for="notsure-option">Not sure</label>
+      </p>
     </fieldset>
-  </form>
+    <div class="fieldset-blanks" style="padding-top: 0;">
+      <p>
+        <label class="fields" for="feature">What is your favorite feature of freeCodeCamp?</label>
+        <select name="dropdown-feature" id="dropdown-feature">
+          <option class="select" value="select-option" disabled selected>Select an option</option>
+          <option value="challenges">Challenges</option>
+          <option value="projects">Projects</option>
+          <option value="community">Community</option>
+          <option value="openSource">Open Source</option>
+        </select>
+      </p>
+    </div>
+    <fieldset class="fieldset-checkbox">
+      <legend class="fields">What would you like to see improved? <span
+          style="font-size: 0.9em; font-weight: light;"><em>(Check all that apply)</em></span></legend>
+      <p class="checkbox-option" style="margin-top: 0.5em;">
+        <input id="frontend" type="checkbox" name="options" value="frontend">
+        <label for="frontend">Front-end Projects</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="backend" type="checkbox" name="options" value="backend">
+        <label for="backend">Back-end Projects</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="data" type="checkbox" name="options" value="data">
+        <label for="data">Data Visualization</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="challenges" type="checkbox" name="options" value="challenges">
+        <label for="challenges">Challenges</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="opensource" type="checkbox" name="options" value="opensource">
+        <label for="opensource">Open Source Community</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="gitter" type="checkbox" name="options" value="gitter">
+        <label for="gitter">Gitter help rooms</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="videos" type="checkbox" name="options" value="videos">
+        <label for="videos">Videos</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="meetups" type="checkbox" name="options" value="meetups">
+        <label for="meetups">City Meetups</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="wiki" type="checkbox" name="options" value="wiki">
+        <label for="wiki">Wiki</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="forum" type="checkbox" name="options" value="forum">
+        <label for="forum">Forum</label>
+      </p>
+      <p class="checkbox-option">
+        <input id="aditional" type="checkbox" name="options" value="aditional">
+        <label for="aditional">Additional Courses</label>
+      </p>
+    </fieldset>
+    <div class="fieldset-blanks" style="padding-top: 0; padding-right: 2em;">
+      <p>
+        <label class="fields" for="comments">Any comments or suggestions?</label><br>
+        <textarea id="comments" type="text" name="suggestions" value="comments" rows="5"
+          placeholder="Enter your comment here..."></textarea>
+      </p>
+    </div>
 
+    <button id="submit">Submit</button>
+
+  </form>
 </body>
 
 </html>
