Add link to survey-form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,14 @@
   <link rel="stylesheet" href="style.css">
   <title>Freecodecamp Projects</title>
 </head>
+
 <body>
   <div class="container">
     <h1 id="title">Freecodecamp Projects</h1>
     <a href="./tribute-page/index.html" class="btn">Tribute Page</a>
     <a href="./wikipedia-page/index.html" class="btn">Wikipedia Page</a>
+    <a href="./survey-form/index.html" class="btn">Survey Form</a>
   </div>
 </body>
+
 </html>
